<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imageViewFullscreen"
        android:layout_width="302dp"
        android:layout_height="615dp"
        android:scaleType="centerCrop"
        android:src="@drawable/level_completescreen"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLevelCompleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_complete"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLevelCompleteInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvLevelCompleteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnBackToHub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:text="@string/back_to_level_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLevelCompleteInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>
